Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-21335

Galera test failure on suite wsrep

    XMLWordPrintable

Details

    Description

      • wsrep.foreign_key : Sporadic failure "WSREP has not yet prepared node for application use"
      • wsrep.pool_of_threads : Sporadic failure "WSREP has not yet prepared node for application use"

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            jplindst Jan Lindström (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1d 5h
                1d 5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.