MDEV-21335 : Galera test failure on suite wsrep

Problem was that wsrep_on was OFF.

This is 10.4 version.